--- a/index.css
+++ b/index.css
@@ -20,6 +20,11 @@ button {
     border: none;
     font-weight: bold;
 }
+#delete-btn {
+    background-color: white;
+    border: 1px solid #5f9341;
+    color: #5f9341;
+}
 ul {
     margin-top: 20px;
     list-style: none;
